width scrollbar-fixed  commit

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+  padding: 0;
+}
 #search-bar {
   width: 366px;
   height: 40px;
@@ -114,7 +118,8 @@
 .whyus-main {
   width: 100%;
   box-sizing: border-box;
-  margin: 72px 0 86px 2px;
+
+  /* margin: 72px 0 86px 2px; */
   padding: 56px 50px;
   /* padding: 56px 136px 83px 138px; */
   background-image: linear-gradient(110deg, #1f4eb2 -5%, #0b8b9e 114%);
@@ -139,6 +144,7 @@
 }
 
 .topdeals {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -155,7 +161,7 @@
 }
 .topdeals-image1,
 .topdeals-image2 {
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   height: 250px;
   border-radius: 10px;
@@ -204,11 +210,13 @@
 .footer-page {
   margin-top: 5%;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
 }
 .followus {
   display: flex;
+  flex-wrap: ;
   align-items: center;
 }
 
